learning/kubernetes/examples/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: netai-textbook
  labels:
    purpose: textbook-lab
