learning/kubernetes/examples/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: textbook-web
  namespace: netai-textbook
spec:
  type: ClusterIP
  selector:
    app: textbook-web
  ports:
    - name: http
      port: 80
      targetPort: http
